--- a/Geeks Who Drank/en.lproj/MainStoryboard.storyboard
+++ b/Geeks Who Drank/en.lproj/MainStoryboard.storyboard
@@ -4,10 +4,10 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
     <scenes>
-        <!--Initial View Controller-->
+        <!--Home Screen View Controller-->
         <scene sceneID="5">
             <objects>
-                <viewController id="2" customClass="InitialViewController" sceneMemberID="viewController">
+                <viewController id="2" customClass="HomeScreenViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="3">
                         <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -49,10 +49,10 @@
             </objects>
             <point key="canvasLocation" x="-809" y="-1212"/>
         </scene>
-        <!--Upload Quiz View Controller-->
+        <!--Event List View Controller-->
         <scene sceneID="wWn-pa-0E6">
             <objects>
-                <viewController id="3P2-ws-jPg" customClass="UploadQuizViewController" sceneMemberID="viewController">
+                <viewController id="3P2-ws-jPg" customClass="EventListViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="4ns-Gx-kCv">
                         <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -127,10 +127,10 @@
             </objects>
             <point key="canvasLocation" x="271" y="-1212"/>
         </scene>
-        <!--Quiz Table View Controller-->
+        <!--Quiz List View Controller-->
         <scene sceneID="ygQ-ui-4cC">
             <objects>
-                <viewController id="Xre-WA-XEP" customClass="QuizTableViewController" sceneMemberID="viewController">
+                <viewController id="Xre-WA-XEP" customClass="QuizListViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="pJr-5y-CoA">
                         <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -251,10 +251,10 @@
             </objects>
             <point key="canvasLocation" x="-269" y="-792"/>
         </scene>
-        <!--Team Detail View Controller-->
+        <!--Quiz Detail View Controller-->
         <scene sceneID="rFF-Ti-Q9f">
             <objects>
-                <viewController id="6Zx-XA-xrD" customClass="TeamDetailViewController" sceneMemberID="viewController">
+                <viewController id="6Zx-XA-xrD" customClass="QuizDetailViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ydi-Iy-xz7">
                         <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -941,16 +941,6 @@
                 <relationship kind="outlet" name="teamNameInput" candidateClass="UITextField"/>
             </relationships>
         </class>
-        <class className="InitialViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/InitialViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="backToInitialView:" candidateClass="UIStoryboardSegue"/>
-                <relationship kind="action" name="hostAQuizPressed:" candidateClass="UIButton"/>
-                <relationship kind="action" name="uploadAQuizPressed:" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="quizButton" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="uploadButton" candidateClass="UIButton"/>
-            </relationships>
-        </class>
         <class className="QuizTableNewTeamCell" superclassName="UITableViewCell">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/QuizTableNewTeamCell.h"/>
             <relationships>
@@ -963,14 +953,6 @@
                 <relationship kind="outlet" name="nameLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="standingLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="teamScoreLabel" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="QuizTableViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/QuizTableViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="backToEventView:" candidateClass="UIStoryboardSegue"/>
-                <relationship kind="action" name="createTeam:" candidateClass="UIStoryboardSegue"/>
-                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
             </relationships>
         </class>
         <class className="RoundDetailViewController" superclassName="UIViewController">
@@ -987,32 +969,11 @@
                 <relationship kind="outletCollection" name="scoreLabels" candidateClass="UILabel"/>
             </relationships>
         </class>
-        <class className="TeamDetailViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/TeamDetailViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="backToTeamDetail:" candidateClass="UIStoryboardSegue"/>
-                <relationship kind="action" name="swipe:" candidateClass="UISwipeGestureRecognizer"/>
-                <relationship kind="action" name="viewRoundDetail:" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="jokerImageView" candidateClass="UIImageView"/>
-                <relationship kind="outlet" name="teamNameLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="teamScoreLabel" candidateClass="UILabel"/>
-                <relationship kind="outletCollection" name="roundButtons" candidateClass="UIButton"/>
-            </relationships>
-        </class>
-        <class className="UIStoryboardSegue" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/UIStoryboardSegue.h"/>
-        </class>
         <class className="UploadQuizCell" superclassName="UITableViewCell">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/UploadQuizCell.h"/>
             <relationships>
                 <relationship kind="outlet" name="dateLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="locationLabel" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="UploadQuizViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/UploadQuizViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
             </relationships>
         </class>
     </classes>
